--- a/On The Map/On The Map/Base.lproj/Main.storyboard
+++ b/On The Map/On The Map/Base.lproj/Main.storyboard
@@ -52,7 +52,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.14339801460000001" green="0.77810069800000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <connections>
                         <outlet property="emailTextField" destination="hPu-2Z-t1c" id="68I-xl-40I"/>
