--- a/On The Map/On The Map/Base.lproj/Main.storyboard
+++ b/On The Map/On The Map/Base.lproj/Main.storyboard
@@ -76,9 +76,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FGe-O6-t3C">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="DZx-er-E5A">
+                                <rect key="frame" x="0.0" y="64" width="375" height="495"/>
+                            </mapView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FGe-O6-t3C">
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="On the Map" id="rWp-m5-5zy">
                                         <barButtonItem key="leftBarButtonItem" title="LOGOUT" id="JeR-1e-4JX">
@@ -95,7 +97,19 @@
                             </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="DZx-er-E5A" firstAttribute="trailing" secondItem="FGe-O6-t3C" secondAttribute="trailing" id="5fn-cT-iPU"/>
+                            <constraint firstItem="DZx-er-E5A" firstAttribute="leading" secondItem="FGe-O6-t3C" secondAttribute="leading" id="CsS-Hv-eH2"/>
+                            <constraint firstItem="DZx-er-E5A" firstAttribute="leading" secondItem="z94-Ne-sgQ" secondAttribute="leading" id="Ekw-df-Wlh"/>
+                            <constraint firstItem="DZx-er-E5A" firstAttribute="centerY" secondItem="z94-Ne-sgQ" secondAttribute="centerY" constant="-22" id="KAX-WT-e16"/>
+                            <constraint firstItem="DZx-er-E5A" firstAttribute="centerX" secondItem="z94-Ne-sgQ" secondAttribute="centerX" id="PMj-yU-udC"/>
+                            <constraint firstItem="DZx-er-E5A" firstAttribute="top" secondItem="FGe-O6-t3C" secondAttribute="bottom" id="UeO-q9-Lqx"/>
+                            <constraint firstItem="4BO-Ui-0OM" firstAttribute="top" secondItem="DZx-er-E5A" secondAttribute="bottom" constant="108" id="X6F-Tq-C2R"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="DZx-er-E5A" id="Gp6-Qt-XM6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HNr-kR-dYI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
