--- a/On The Map/On The Map/Base.lproj/Main.storyboard
+++ b/On The Map/On The Map/Base.lproj/Main.storyboard
@@ -121,7 +121,11 @@
                                     <action selector="refreshButtonPressed:" destination="sBF-Bm-t0S" id="6Tg-64-h6n"/>
                                 </connections>
                             </barButtonItem>
-                            <barButtonItem image="pin" id="alJ-AA-Khf"/>
+                            <barButtonItem title="Item" image="pin" id="alJ-AA-Khf">
+                                <connections>
+                                    <segue destination="Drg-ON-ZzA" kind="presentation" id="Z5g-kX-uL8"/>
+                                </connections>
+                            </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
                     <connections>
@@ -203,7 +207,11 @@
                                     <action selector="refreshButtonPressed:" destination="jIm-cx-zmU" id="Zho-cX-0vl"/>
                                 </connections>
                             </barButtonItem>
-                            <barButtonItem image="pin" id="pfD-FZ-ZXY"/>
+                            <barButtonItem image="pin" id="pfD-FZ-ZXY">
+                                <connections>
+                                    <segue destination="Drg-ON-ZzA" kind="presentation" id="NS5-3Q-Gmv"/>
+                                </connections>
+                            </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
                     <connections>
@@ -213,6 +221,83 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qmn-yn-lfe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="885.60000000000002" y="389.95502248875567"/>
+        </scene>
+        <!--Information Posting View Controller-->
+        <scene sceneID="Sbc-HQ-RJf">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6XH-Up-2Bl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="Drg-ON-ZzA" customClass="InformationPostingViewController" customModule="On_The_Map" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="sej-l3-ufH"/>
+                        <viewControllerLayoutGuide type="bottom" id="3at-Qt-xv4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5EK-bW-wZc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Nxe-2G-rO6">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="barTintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <items>
+                                    <navigationItem id="JWj-zw-98d">
+                                        <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="ErY-eD-Lnl">
+                                            <connections>
+                                                <action selector="cancelButtonPressed:" destination="Drg-ON-ZzA" id="BpZ-Bt-Qpx"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" text="Where are you studying today?" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Sh-WG-cT3">
+                                <rect key="frame" x="0.0" y="64" width="375" height="224"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="58"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S51-gC-o3i">
+                                <rect key="frame" x="70" y="598" width="234" height="49"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <state key="normal" title="Find on the Map"/>
+                                <connections>
+                                    <action selector="findButtonPressed:" destination="Drg-ON-ZzA" eventType="touchUpInside" id="7ya-fo-fOj"/>
+                                </connections>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" delaysContentTouches="NO" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="WFw-np-dyb">
+                                <rect key="frame" x="0.0" y="281" width="375" height="260"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.31547566978107144" green="0.60666148878441106" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="WEE-nV-C8T">
+                                <rect key="frame" x="0.0" y="212" width="375" height="455"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </mapView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="FW0-S3-MMN">
+                                <rect key="frame" x="0.0" y="64" width="375" height="156"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.42844462280000001" green="0.64017707960000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="findButton" destination="S51-gC-o3i" id="g3G-Gy-iWZ"/>
+                        <outlet property="mainTextView" destination="2Sh-WG-cT3" id="WBX-Pz-LIm"/>
+                        <outlet property="mapTextView" destination="FW0-S3-MMN" id="p5F-hG-PaM"/>
+                        <outlet property="mapView" destination="WEE-nV-C8T" id="5re-eP-QUF"/>
+                        <outlet property="userEntryTextField" destination="WFw-np-dyb" id="ijD-AR-1pF"/>
+                    </connections>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="1749.5999999999999" y="43.628185907046479"/>
         </scene>
         <!--List-->
         <scene sceneID="i4Y-ha-m4l">
@@ -259,4 +344,7 @@
         <image name="map" width="32" height="32"/>
         <image name="pin" width="32" height="32"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="Z5g-kX-uL8"/>
+    </inferredMetricsTieBreakers>
 </document>
