--- a/On The Map/On The Map/Base.lproj/Main.storyboard
+++ b/On The Map/On The Map/Base.lproj/Main.storyboard
@@ -172,11 +172,11 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="66"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MhM-lp-ek1" id="ZGl-Zk-6Bh">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="65.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="q1i-uf-91x">
-                                            <rect key="frame" x="62" y="0.0" width="298" height="65.5"/>
+                                            <rect key="frame" x="62" y="0.0" width="298" height="65"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -225,7 +225,6 @@
         <!--Information Posting View Controller-->
         <scene sceneID="Sbc-HQ-RJf">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6XH-Up-2Bl" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="Drg-ON-ZzA" customClass="InformationPostingViewController" customModule="On_The_Map" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="sej-l3-ufH"/>
@@ -285,6 +284,16 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T2g-Sz-Lt7">
+                                <rect key="frame" x="155" y="607" width="65" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Submit">
+                                    <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="submitButtonPressed:" destination="Drg-ON-ZzA" eventType="touchUpInside" id="BLw-3T-P9b"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -293,9 +302,11 @@
                         <outlet property="mainTextView" destination="2Sh-WG-cT3" id="WBX-Pz-LIm"/>
                         <outlet property="mapTextView" destination="FW0-S3-MMN" id="p5F-hG-PaM"/>
                         <outlet property="mapView" destination="WEE-nV-C8T" id="5re-eP-QUF"/>
+                        <outlet property="submitButton" destination="T2g-Sz-Lt7" id="kZO-Ms-5oj"/>
                         <outlet property="userEntryTextField" destination="WFw-np-dyb" id="ijD-AR-1pF"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6XH-Up-2Bl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1749.5999999999999" y="43.628185907046479"/>
         </scene>
